--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,46 @@
     "512": "imgs/icon.512.png"
   },
   "permissions": [
-    "<all_urls>",
+    "activeTab",
+    "alarms",
+    "bookmarks",
+    "browserSettings",
+    "browsingData",
+    "captivePortal",
+    "clipboardRead",
+    "clipboardWrite",
+    "contextMenus",
+    "contextualIdentities",
+    "cookies",
+    "dns",
+    "downloads",
+    "downloads.open",
+    "find",
+    "geolocation",
+    "history",
+    "identity",
+    "idle",
+    "management",
+    "menus",
+    "menus.overrideContext",
+    "nativeMessaging",
+    "notifications",
+    "pkcs11",
+    "privacy",
+    "proxy",
+    "search",
+    "sessions",
+    "storage",
+    "tabHide",
     "tabs",
-    "tabHide"
+    "theme",
+    "topSites",
+    "unlimitedStorage",
+    "webNavigation",
+    "webRequest",
+    "webRequestBlocking",
+
+    "<all_urls>"
   ],
   "content_scripts": [
     {
@@ -17,11 +54,6 @@
       "js": ["js/site_specific/news.ycombinator.com.js"]
     }
   ],
-  "background": {
-    "scripts": [
-      "js/background/autoReader.js"
-    ]
-  },
   "sidebar_action": {
     "default_title": "T1eB4n Bar",
     "default_panel": "html/sidebar.html",
