--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "T1eB4n's Firefox Extension",
   "scripts": {
+    "build": "esbuild js/sidebar.jsx --bundle --outfile=js/sidebar.js",
     "dev": "web-ext run --firefox=/Applications/LibreWolf.app/Contents/MacOS/librewolf-bin"
   },
   "repository": {
@@ -17,6 +18,10 @@
   },
   "license": "AGPL-3.0-or-later",
   "devDependencies": {
+    "esbuild": "^0.14.53",
+    "nodemon": "^2.0.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "web-ext": "^7.1.0"
   }
 }
